@@ -90,12 +90,11 @@ dd          { margin-left: 1.5em;}
 -------------------------------------------------------------- */
 
 table       { margin-bottom: 1.4em; }
-th          { border-bottom: 2px solid #ccc; font-weight: bold; background: #ddd; }
-td          { border-bottom: 1px solid #ddd; }
+th          { font-weight: bold; background: #C3D9FF; }
 th,td       { padding: 4px 10px 4px 5px; }
-tr.even td  { background: #eee; }
+tr.even td  { background: #E5ECF9; }
 tfoot       { font-style: italic; }
-caption     { background: #ffc; }
+caption     { background: #eee; }
 
 /* Use this if you use span-x classes on th/td. */
 table .last { padding-right: 0; } 
